# archemist

./: .flake8  .gitignore  .pre-commit-config.yaml  .rosinstall  CMakeLists.txt  LICENSE  README.md  bandit.yaml  docEdit.yaml  package.xml  process.py  requirements.txt  setup.py  to-do.txt  tox.ini
.tox/py310/: .tox-info.json
archemist/application/: cmd_message.py
examples/apc_workflow_test_recipes/: apc_recipe_1.yaml  apc_recipe_cleaning.yaml  apc_recipe_filtration.yaml  apc_recipe_paracetamol.yaml  apc_recipe_synthesis.yaml  apc_recipe_water_test.yaml  workflow_config_sim.yaml
msg/: HandlerBusMessage.msg
msg/franka_emika/: PandaCommand.msg
msg/ika_plate_rct_digital/: IKACommand.msg  IKAReading.msg
msg/kern_pcb_balance/: KernCommand.msg  KernReading.msg
msg/liquid_dispenser/: DispenserCommand.msg
msg/mettler_toledo_quantos_q2/: QuantosCommand.msg  QuantosResponse.msg  QuantosSample.msg
msg/solubility_camera/: CameraCommand.msg
scripts/: archemist_cli.py  clear_db.py  create_workflow_dir  create_workflow_dir.py  launch_handler.py  launch_handlers.py  launch_workflow_manager.py  resetDb.py  run_cli  run_cli.py  run_processor.py  run_recipe.py  run_server.py  server_settings.yaml  soluiblity_run.py  workflow_server.py
scripts/config_files/: algae_bot_config_file.yaml  chemspeed_testing_config_file.yaml  dif_demo_testing_config_file.yaml  lightbox_testing_config_file.yaml  solubility_screening_config.yaml
scripts/recipes/: algae_bot_test_recipe.yaml  dif_demo_test_recipe.yaml  lightbox_test_recipe.yaml  solubility_screening_recipe.yaml
src/archemist/: __main__.py
tests/: file_paths.py  quick_testin.py  test_batch_recipe.py  test_filtration.py  test_list_adapter.py  test_quick.py  test_station.py  test_yaml_handler.py
tests/application/: test_archemist_server.py
(+593 files in other folders)
